Fix z-index on notes target highlight
This fixes links not clickable when the note is :targeted.

--- a/_sass/_pages/_feature.scss
+++ b/_sass/_pages/_feature.scss
@@ -643,6 +643,7 @@
 		content: '';
 		display: block;
 		position: absolute;
+		z-index: -1;
 		left: rem(-44px);
 		right: rem(-8px);
 		top: rem(-4px);
